fix: amp fix index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h4>Skills and Proficiency:</h4>
 
     <ul>
-        <li>HTML & CSS</li>
+        <li>HTML &amp; CSS</li>
         <li>JavaScript (basics)</li>
         <li>React (basics)</li>
         <li>Node.js (basics)</li>
