upd: update cv layout and files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,57 @@
     <title>Slava Ivanov &ndash; front-end developer &ndash; CV</title>
     <link rel="stylesheet" type="text/css" href="./css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="head-wrapper">
         <header class="header-block">
-            <nav>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <nav class="nav-block">
+                <ul class="menu-block">
+                    <li class="menu-item"><a href="">contacts</a></li>
+                    <li class="menu-item"><a href="">skills</a></li>
+                    <li class="menu-item"><a href="">about</a></li>
+                    <li class="menu-item"><a href="">code</a></li>
+                    <li class="menu-item"><a href="">projects</a></li>
+                    <li class="menu-item"><a href="">courses</a></li>
+                    <li class="menu-item"><a href="">languages</a></li>
                 </ul>
             </nav>
-        </header>        
+            <div class="person-block">
+                <figure class="person-photo">
+                    <img src="./images/photo.jpg" width="360" height="360" alt="My photo" title="That's me =)">
+                </figure>
+                <aside class="person-info">
+                    <h1 class="person-name">Slava Ivanov</h1>
+                    <h2 class="person-position">front-end developer</h2>
+                    <div class="person-info-divider"></div>
+
+                    <ul class="person-contacts">
+                        <li>Taganrog, Russia</li>
+                        <li>+7 (988) 568-72-36</li>
+                        <li>drumtrack@yandex.ru</li>
+                        <li>questrator</li>
+                    </ul>
+
+                </aside>
+            </div>
+        </header>
     </div>
     <div class="main-wrapper">
+        <div class="header-main-divider"></div>
+        <main>
 
+        </main>
+    </div>
+    <div class="footer-wrapper">
+        <footer>
+
+        </footer>
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
