upd: update files and layout

--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
                     <h1 class="person-name">Slava Ivanov</h1>
                     <h2 class="person-position">front-end developer</h2>
                     <div class="person-info-divider"></div>
-
                     <ul class="person-contacts">
-                        <li>Taganrog, Russia</li>
-                        <li>+7 (988) 568-72-36</li>
-                        <li>drumtrack@yandex.ru</li>
-                        <li>questrator</li>
+                        <li class="person-contact place">Taganrog, Russia</li>
+                        <li class="person-contact phone"><a href="tel:+79885687236">+7 (988) 568-72-36</a></li>
+                        <li class="person-contact email"><a href="mailto:drumtrack@yandex.ru">drumtrack@yandex.ru</a></li>
+                        <li class="person-contact github"><a href="https://github.com/questrator" target="_blank">questrator</a></li>
                     </ul>
-
                 </aside>
             </div>
         </header>
