--- a/index.html
+++ b/index.html
@@ -48,7 +48,36 @@
     <div class="main-wrapper">
         <div class="header-main-divider"></div>
         <main>
-
+            <section>
+                <div class="section-title-block">
+                    <h2 class="section-title">About me</h2>
+                </div>
+                <div class="section-description">I am currently working as a content manager and site administrator. I plan to become a frontend developer. Wish me luck 😋</div>
+            </section>
+            <section>
+                <div class="section-title-block">
+                    <h2 class="section-title">Skills and Proficiency</h2>
+                </div>
+                <div class="section-description"></div>
+            </section>
+            <section>
+                <div class="section-title-block">
+                    <h2 class="section-title">Code example</h2>
+                </div>
+                <div class="section-description"></div>
+            </section>
+            <section>
+                <div class="section-title-block">
+                    <h2 class="section-title">Courses</h2>
+                </div>
+                <div class="section-description"></div>
+            </section>
+            <section>
+                <div class="section-title-block">
+                    <h2 class="section-title">Languages</h2>
+                </div>
+                <div class="section-description"></div>
+            </section>
         </main>
     </div>
     <div class="footer-wrapper">
