--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 </head>
 
 <body>
-    <div class="head-wrapper">
+    <div class="header-wrapper">
         <header class="header-block">
             <nav class="nav-block">
                 <ul class="menu-block">
-                    <li class="menu-item"><a href="">contacts</a></li>
-                    <li class="menu-item"><a href="">skills</a></li>
-                    <li class="menu-item"><a href="">about</a></li>
-                    <li class="menu-item"><a href="">code</a></li>
-                    <li class="menu-item"><a href="">projects</a></li>
-                    <li class="menu-item"><a href="">courses</a></li>
-                    <li class="menu-item"><a href="">languages</a></li>
+                    <li class="menu-item"><a href="#contacts">contacts</a></li>
+                    <li class="menu-item"><a href="#about">about</a></li>
+                    <li class="menu-item"><a href="#skills">skills</a></li>
+                    <li class="menu-item"><a href="#code">code</a></li>
+                    <li class="menu-item"><a href="#projects">projects</a></li>
+                    <li class="menu-item"><a href="#courses">courses</a></li>
+                    <li class="menu-item"><a href="#languages">languages</a></li>
                 </ul>
             </nav>
             <div class="person-block">
@@ -50,39 +50,71 @@
         <main>
             <section>
                 <div class="section-title-block">
+                    <a name="about"></a>
                     <h2 class="section-title">About me</h2>
                 </div>
                 <div class="section-description">I am currently working as a content manager and site administrator. I plan to become a frontend developer. Wish me luck 😋</div>
             </section>
             <section>
                 <div class="section-title-block">
+                    <a name="skills"></a>
                     <h2 class="section-title">Skills and Proficiency</h2>
                 </div>
-                <div class="section-description"></div>
+                <div class="section-description">
+                    <ul>
+                        <li>HTML &amp; CSS</li>
+                        <li>JavaScript (basics)</li>
+                        <li>React (basics)</li>
+                        <li>Node.js (basics)</li>
+                        <li>Git, GitHub (basics)</li>
+                        <li>Adobe Photoshop</li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <div class="section-title-block">
+                    <a name="code"></a>
                     <h2 class="section-title">Code example</h2>
                 </div>
-                <div class="section-description"></div>
+                <div class="section-description">
+
+                    <p><strong>Snail Sort</strong> kata from CodeWars (<a href="https://www.codewars.com/kata/521c2db8ddc89b9b7a0000c1"
+                        target="_blank">link</a>)</p>
+
+                </div>
             </section>
             <section>
                 <div class="section-title-block">
+                    <a name="courses"></a>
                     <h2 class="section-title">Courses</h2>
                 </div>
-                <div class="section-description"></div>
+                <div class="section-description">
+                    <ul>
+                        <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <div class="section-title-block">
+                    <a name="languages"></a>
                     <h2 class="section-title">Languages</h2>
                 </div>
-                <div class="section-description"></div>
+                <div class="section-description">
+                    <ul>
+                        <li>Russian (native)</li>
+                        <li>English (B1)</li>
+                    </ul>
+                </div>
             </section>
         </main>
     </div>
     <div class="footer-wrapper">
-        <footer>
-
+        <footer class="footer-block">
+            <div class="footer-github">
+                <div class="person-contact github"><a href="https://github.com/questrator" target="_blank">questrator</a></div>
+            </div>
+            <div class="footer-copy">Slava Ivanov &copy; 2022</div>
+            <div class="footer-rss"><a href="https://rs.school/js/" target="_blank"><img src="./images/rs_school_js.svg" height="70" width="auto"></a></div>
         </footer>
     </div>
     <script src="./script.js"></script>
