--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h1 class="person-name">Slava Ivanov</h1>
                     <h2 class="person-position">front-end developer</h2>
                     <div class="person-info-divider"></div>
-                    <ul class="person-contacts">
+                    <ul class="person-contacts"  id="contacts">
                         <li class="person-contact place">Taganrog, Russia</li>
                         <li class="person-contact phone"><a href="tel:+79885687236">+7 (988) 568-72-36</a></li>
                         <li class="person-contact email"><a href="mailto:drumtrack@yandex.ru">drumtrack@yandex.ru</a></li>
@@ -50,15 +50,13 @@
         <main>
             <section>
                 <div class="section-title-block">
-                    <a name="about"></a>
-                    <h2 class="section-title">About me</h2>
+                    <h2 class="section-title" id="about">About me</h2>
                 </div>
                 <div class="section-description">I am currently working as a content manager and site administrator. I plan to become a frontend developer. Wish me luck 😋</div>
             </section>
             <section>
                 <div class="section-title-block">
-                    <a name="skills"></a>
-                    <h2 class="section-title">Skills and Proficiency</h2>
+                    <h2 class="section-title" id="skills">Skills and Proficiency</h2>
                 </div>
                 <div class="section-description">
                     <ul>
@@ -73,8 +71,7 @@
             </section>
             <section>
                 <div class="section-title-block">
-                    <a name="code"></a>
-                    <h2 class="section-title">Code example</h2>
+                    <h2 class="section-title" id="code">Code example</h2>
                 </div>
                 <div class="section-description">
 
@@ -85,8 +82,17 @@
             </section>
             <section>
                 <div class="section-title-block">
-                    <a name="courses"></a>
-                    <h2 class="section-title">Courses</h2>
+                    <h2 class="section-title" id="projects">Projects</h2>
+                </div>
+                <div class="section-description">
+                    <ul>
+                        <li>RS Schools «CV» project</li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <div class="section-title-block">
+                    <h2 class="section-title" id="courses">Courses</h2>
                 </div>
                 <div class="section-description">
                     <ul>
@@ -96,8 +102,7 @@
             </section>
             <section>
                 <div class="section-title-block">
-                    <a name="languages"></a>
-                    <h2 class="section-title">Languages</h2>
+                    <h2 class="section-title" id="languages">Languages</h2>
                 </div>
                 <div class="section-description">
                     <ul>
@@ -114,7 +119,7 @@
                 <div class="person-contact github"><a href="https://github.com/questrator" target="_blank">questrator</a></div>
             </div>
             <div class="footer-copy">Slava Ivanov &copy; 2022</div>
-            <div class="footer-rss"><a href="https://rs.school/js/" target="_blank"><img src="./images/rs_school_js.svg" height="70" width="auto"></a></div>
+            <div class="footer-rss"><a href="https://rs.school/js/" target="_blank"><img src="./images/rs_school_js.svg" height="70" alt="Front-end / JS - RS School"></a></div>
         </footer>
     </div>
     <script src="./script.js"></script>
