upd: update style

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                 </div>
                 <div class="section-description">
 
-                    <p><strong>Snail Sort</strong> kata from CodeWars (<a href="https://www.codewars.com/kata/521c2db8ddc89b9b7a0000c1"
-                        target="_blank">link</a>)</p>
+                    <p><strong>Snail Sort</strong> kata from CodeWars (<a href="https://www.codewars.com/kata/521c2db8ddc89b9b7a0000c1" target="_blank">link</a>)</p>
 
                         <blockquote class="label-out bg-red">
                             Given an <em>n x n</em> array, return the array elements arranged from outermost elements to the middle element,
@@ -123,7 +122,7 @@
                 </div>
                 <div class="section-description">
                     <ul>
-                        <li>RS Schools «CV» project</li>
+                        <li><a href="https://github.com/questrator/rsschool-cv" target="_blank">RS Schools «CV» project</a></li>
                     </ul>
                 </div>
             </section>
