fix: tel number

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="person-info-divider"></div>
                     <ul class="person-contacts"  id="contacts">
                         <li class="person-contact place">Taganrog, Russia</li>
-                        <li class="person-contact phone"><a href="tel:+79885687236">+7 (988) 568-72-36</a></li>
+                        <li class="person-contact phone"><a href="tel:+79885687236">+7&nbsp;(988)&nbsp;568&#8209;72&#8209;36</a></li>
                         <li class="person-contact email"><a href="mailto:drumtrack@yandex.ru">drumtrack@yandex.ru</a></li>
                         <li class="person-contact github"><a href="https://github.com/questrator" target="_blank">questrator</a></li>
                     </ul>
